--- a/src/components/ui/input/Input.module.scss
+++ b/src/components/ui/input/Input.module.scss
@@ -37,6 +37,11 @@
   padding: 0;
   margin: 0;
   border: none;
+
+  &:read-only {
+    color: $greyLight;
+    cursor: default;
+  }
 }
 
 .icon svg {
