feat: add popular categories

--- a/src/components/ui/titleSection/TitleSection.module.scss
+++ b/src/components/ui/titleSection/TitleSection.module.scss
@@ -3,12 +3,22 @@
 .title {
   @include bold36Playfair;
   color: $black;
+  margin: 0;
+}
+
+.block {
+  @include flexCenterBetween;
   margin-bottom: 40px;
+  column-gap: 40px;
 }
 
 @media (max-width: $mob) {
   .title {
     @include bold30Playfair;
+    margin: 0;
+  }
+
+  .block {
     margin-bottom: 24px;
   }
 }
