refactor: rename popular categories

--- a/src/components/ui/loading/Loading.module.scss
+++ b/src/components/ui/loading/Loading.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/utils/index.scss';
 
 .block {
-  @include fullSize;;
+  @include fullSize;
   @include flexCenter;
   padding: 40px;
 }
@@ -12,12 +12,12 @@
 
 @media (max-width: $tablet) {
   .block {
-      padding: 32px;
-    }
-  
-    .img {
-      @include sizes(90px, 90px);
-    }
+    padding: 32px;
+  }
+
+  .img {
+    @include sizes(90px, 90px);
+  }
 }
 
 @media (max-width: $tablet) {
