--- a/src/components/ui/titleSectionLink/TitleSectionLink.module.scss
+++ b/src/components/ui/titleSectionLink/TitleSectionLink.module.scss
@@ -2,13 +2,15 @@
 
 .link {
   font-family: 'Inter', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 20px;
-    font-style: italic;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 20px;
+  font-style: italic;
   color: $black;
   border-bottom: 1px solid $black;
-  transition: color 0.2s ease, border-bottom 0.2s ease;
+  transition:
+    color 0.2s ease,
+    border-bottom 0.2s ease;
 
   @include hover {
     color: $grey;
@@ -18,7 +20,7 @@
 
 @media (max-width: $mob) {
   .link {
-      font-size: 14px;
-      line-height: 16px;
-    }
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
