--- a/src/components/sections/recipesUser/RecipesUser.module.scss
+++ b/src/components/sections/recipesUser/RecipesUser.module.scss
@@ -4,13 +4,19 @@
   margin-top: 160px;
 }
 
-.title {
-  @include bold60Playfair;
-  color: $black;
+.titles {
+  @include flexCenterBetween;
   padding-bottom: 30px;
   border-bottom: 1px solid $greyLight;
   margin-bottom: 64px;
+
+  h1 {
+    @include bold60Playfair;
+    color: $black;
+    margin: 0;
+  }
 }
+
 
 .cards {
   @include grid(3);
@@ -22,10 +28,13 @@
     margin-top: 120px;
   }
 
-  .title {
-    @include bold40Playfair;
+  .titles {
     padding-bottom: 20px;
     margin-bottom: 40px;
+
+    h1 {
+      @include bold40Playfair;
+    }
   }
 
   .cards {
@@ -38,10 +47,13 @@
     margin-top: 100px;
   }
 
-  .title {
-    @include bold24Playfair;
+  .titles {
     padding-bottom: 16px;
     margin-bottom: 32px;
+
+    h1 {
+      @include bold24Playfair;
+    }
   }
 
   .cards {
