feat: add update recipe page and functional

--- a/src/components/forms/recipeForm/RecipeForm.module.scss
+++ b/src/components/forms/recipeForm/RecipeForm.module.scss
@@ -21,6 +21,36 @@
   row-gap: 48px;
 
   div {
-    margin: 0;
+    margin: 0 !important;
+  }
+}
+
+@media (max-width: $tablet) {
+  .requiredNote {
+      @include regular16Inter;
+      margin-bottom: 32px;
+    }
+  
+    .btn {
+      margin-top: 40px;
+    }
+  
+    .form {
+      row-gap: 36px;
+    }
+}
+
+@media (max-width: $mob) {
+  .requiredNote {
+    @include regular14Inter;
+    margin-bottom: 24px;
+  }
+
+  .btn {
+    margin-top: 32px;
+  }
+
+  .form {
+    row-gap: 32px;
   }
 }
