--- a/src/components/sections/notFound/NotFound.module.scss
+++ b/src/components/sections/notFound/NotFound.module.scss
@@ -6,20 +6,20 @@
 }
 
 .container {
-    @include flexCenter;
-    @include fullSize;
-      flex-direction: column;
-      row-gap: 40px;
-      margin-top: 160px;
+  @include flexCenter;
+  @include fullSize;
+  flex-direction: column;
+  row-gap: 40px;
+  margin-top: 160px;
 }
 
 .title {
   color: $orange;
   font-family: 'Playfair Display', serif;
-    font-size: 120px;
-    font-weight: 700;
-    line-height: 120%;
-    letter-spacing: -1px;
+  font-size: 120px;
+  font-weight: 700;
+  line-height: 120%;
+  letter-spacing: -1px;
   text-align: center;
   margin: 0;
 }
@@ -34,7 +34,8 @@
   @include flexCenter;
   column-gap: 40px;
 
-  a, button {
+  a,
+  button {
     width: 100%;
     flex-shrink: 0;
   }
@@ -42,25 +43,25 @@
 
 @media (max-width: $tablet) {
   .section {
-      min-height: calc(100vh - 565px - 65px);
-    }
-  
-    .container {
-      row-gap: 32px;
-      margin-top: 120px;
-    }
-  
-    .title {
-      font-size: 86px;
-    }
-  
-    .text {
-      @include regular18Inter;
-    }
-  
-    .btns {
-      column-gap: 32px;
-    }
+    min-height: calc(100vh - 565px - 65px);
+  }
+
+  .container {
+    row-gap: 32px;
+    margin-top: 120px;
+  }
+
+  .title {
+    font-size: 86px;
+  }
+
+  .text {
+    @include regular18Inter;
+  }
+
+  .btns {
+    column-gap: 32px;
+  }
 }
 
 @media (max-width: $mob) {
