--- a/src/components/ui/imageUpload/ImageUpload.module.scss
+++ b/src/components/ui/imageUpload/ImageUpload.module.scss
@@ -27,3 +27,25 @@
     border-radius: 8px;
   }
 }
+
+
+@media (max-width: $tablet) {
+  .fileInput {
+      column-gap: 32px;
+    }
+  
+    .filePreview {
+      @include sizes(200px, 200px);
+    }
+}
+
+@media (max-width: $mob) {
+  .fileInput {
+      row-gap: 24px;
+      @include flexColumn;
+    }
+  
+    .filePreview {
+      @include fullSize;
+    }
+}
