feat: add tabs btns

--- a/src/components/sections/admin/adminPanel/AdminPanel.module.scss
+++ b/src/components/sections/admin/adminPanel/AdminPanel.module.scss
@@ -1,3 +1,98 @@
+@import '../../../../styles/utils/index.scss';
+
 .section {
-  margin-top: 200px;
+  margin-top: 160px;
+}
+
+.title {
+  @include bold60Playfair;
+  color: $black;
+  padding-bottom: 30px;
+  border-bottom: 1px solid $greyLight;
+  margin-bottom: 64px;
+}
+
+.content {
+  @include flexStart;
+  column-gap: 60px;
+}
+
+.tabContainer {
+  width: 160px;
+  height: auto;
+  @include flexColumn;
+  row-gap: 20px;
+  flex-shrink: 0;
+}
+
+.tabButton {
+  display: block;
+  flex-shrink: 0;
+  @include fullSize;
+  @include medium18Inter;
+  font-style: italic;
+  border: 2px solid $black;
+  padding: 6px 10px;
+  color: $black;
+  transition: color 0.2s ease, border-color 0.2s ease;
+
+  &.active {
+    color: $orange;
+    border-color: $orange;
+  }
+}
+
+@media (max-width: $tablet) {
+  .section {
+    margin-top: 120px;
+  }
+
+  .title {
+    @include bold40Playfair;
+    padding-bottom: 20px;
+    margin-bottom: 40px;
+  }
+
+  .content {
+    column-gap: 40px;
+  }
+
+  .tabContainer {
+    width: 140px;
+    row-gap: 16px;
+  }
+
+  .tabButton {
+    @include medium16Inter;
+    padding: 4px 8px;
+  }
+}
+
+@media (max-width: $mob) {
+  .section {
+    margin-top: 100px;
+  }
+
+  .title {
+    @include bold24Playfair;
+    padding-bottom: 16px;
+    margin-bottom: 32px;
+  }
+
+  .content {
+    @include flexColumn;
+    row-gap: 40px;
+  }
+
+  .tabContainer {
+    width: 100%;
+    @include flexCenter;
+    flex-direction: row;
+    column-gap: 20px;
+  }
+
+  .tabButton {
+    width: 100px;
+    text-align: center;
+  }
 }
