--- a/src/components/sections/moderator/moderatorPanel/ModeratorPanel.module.scss
+++ b/src/components/sections/moderator/moderatorPanel/ModeratorPanel.module.scss
@@ -4,12 +4,23 @@
   margin-top: 160px;
 }
 
-.title {
-  @include bold60Playfair;
-  color: $black;
+.titles {
+  @include flexColumn;
+  row-gap: 16px;
   padding-bottom: 30px;
   border-bottom: 1px solid $greyLight;
   margin-bottom: 64px;
+}
+
+.title {
+  @include bold60Playfair;
+  color: $black;
+  margin: 0;
+}
+
+.description {
+  @include regular18Inter;
+  font-style: italic;
 }
 
 .content {
@@ -47,25 +58,28 @@
     margin-top: 120px;
   }
 
-  .title {
-    @include bold40Playfair;
+  .titles {
     padding-bottom: 20px;
     margin-bottom: 40px;
   }
 
-    .content {
-      column-gap: 40px;
-    }
-  
-    .tabContainer {
-      width: 140px;
-      row-gap: 16px;
-    }
-  
-    .tabButton {
-      @include medium16Inter;
-      padding: 4px 8px;
-    }
+  .title {
+    @include bold40Playfair;
+  }
+
+  .content {
+    column-gap: 40px;
+  }
+
+  .tabContainer {
+    width: 140px;
+    row-gap: 16px;
+  }
+
+  .tabButton {
+    @include medium16Inter;
+    padding: 4px 8px;
+  }
 }
 
 @media (max-width: $mob) {
@@ -73,26 +87,33 @@
     margin-top: 100px;
   }
 
-  .title {
-    @include bold24Playfair;
+  .titles {
     padding-bottom: 16px;
     margin-bottom: 32px;
   }
 
-    .content {
-      @include flexColumn;
-      row-gap: 40px;
-    }
-  
-    .tabContainer {
-      width: 100%;
-      @include flexCenter;
-      flex-direction: row;
-      column-gap: 20px;
-    }
+  .title {
+    @include bold24Playfair;
+  }
 
-    .tabButton {
-      width: 100px;
-      text-align: center;
-    }
+  .content {
+    @include flexColumn;
+    row-gap: 40px;
+  }
+
+  .tabContainer {
+    width: 100%;
+    @include flexCenter;
+    flex-direction: row;
+    column-gap: 20px;
+  }
+
+  .tabButton {
+    width: 100px;
+    text-align: center;
+  }
+
+  .description {
+    @include regular16Inter;
+  }
 }
