--- a/src/components/layouts/adminModerMain/AdminModerMain.module.scss
+++ b/src/components/layouts/adminModerMain/AdminModerMain.module.scss
@@ -1,15 +1,26 @@
-@import '../../../../styles/utils/index.scss';
+@import '../../../styles/utils/index.scss';
 
 .section {
   margin-top: 160px;
 }
 
-.title {
-  @include bold60Playfair;
-  color: $black;
+.titles {
+  @include flexColumn;
+  row-gap: 16px;
   padding-bottom: 30px;
   border-bottom: 1px solid $greyLight;
   margin-bottom: 64px;
+}
+
+.title {
+  @include bold60Playfair;
+  color: $black;
+  margin: 0;
+}
+
+.description {
+  @include regular18Inter;
+  font-style: italic;
 }
 
 .content {
@@ -47,10 +58,13 @@
     margin-top: 120px;
   }
 
-  .title {
-    @include bold40Playfair;
+  .titles {
     padding-bottom: 20px;
     margin-bottom: 40px;
+  }
+
+  .title {
+    @include bold40Playfair;
   }
 
   .content {
@@ -73,10 +87,13 @@
     margin-top: 100px;
   }
 
-  .title {
-    @include bold24Playfair;
+  .titles {
     padding-bottom: 16px;
     margin-bottom: 32px;
+  }
+
+  .title {
+    @include bold24Playfair;
   }
 
   .content {
@@ -94,5 +111,9 @@
   .tabButton {
     width: 100px;
     text-align: center;
+  }
+
+  .description {
+    @include regular16Inter;
   }
 }
