--- a/src/components/cards/userCard/UserCard.module.scss
+++ b/src/components/cards/userCard/UserCard.module.scss
@@ -4,8 +4,8 @@
   @include flexStartBetween;
   @include mb(30px);
   padding-bottom: 20px;
-    border-bottom: 1px solid $grey;
-    column-gap: 60px;
+  border-bottom: 1px solid $grey;
+  column-gap: 60px;
 }
 
 .info {
@@ -46,16 +46,57 @@
 }
 
 .banInput {
-    @include regular14Inter;
-      width: 100%;
-      color: $black;
-      padding: 6px;
-      margin: 0;
-      border: none;
-      border: 1px solid $black;
-    
-      &:read-only {
-        color: $greyLight;
-        cursor: default;
-      }
+  @include regular14Inter;
+  width: 100%;
+  color: $black;
+  padding: 6px;
+  margin: 0;
+  border: none;
+  border: 1px solid $black;
+
+  &:read-only {
+    color: $greyLight;
+    cursor: default;
+  }
+}
+
+@media (max-width: $tablet) {
+  .card {
+    @include mb(24px);
+    padding-bottom: 16px;
+    column-gap: 40px;
+  }
+
+  .infoBlock {
+    @include regular16Inter;
+  }
+
+  .actions {
+    row-gap: 10px;
+  }
+
+  .banSection,
+  .roleSection {
+    column-gap: 10px;
+  }
+
+  .banInput {
+    padding: 4px;
+  }
+}
+
+@media (max-width: $mob) {
+  .card {
+    @include flexColumn;
+    row-gap: 20px;
+  }
+
+  .info {
+    @include flexColumn;
+    row-gap: 8px;
+  }
+
+  .actions {
+    align-items: flex-start;
+  }
 }
