--- a/src/components/sections/moderator/moderatorCategories/ModeratorCategories.module.scss
+++ b/src/components/sections/moderator/moderatorCategories/ModeratorCategories.module.scss
@@ -8,11 +8,39 @@
 .titles {
   @include flexCenterBetween;
   column-gap: 40px;
-    padding-bottom: 30px;
-      border-bottom: 1px solid $greyLight;
-      margin-bottom: 64px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid $greyLight;
+  margin-bottom: 64px;
 }
 
 .title {
   margin: 0;
+}
+
+@media (max-width: $tablet) {
+  .cards {
+    @include grid(2);
+    grid-gap: 32px;
+  }
+
+  .titles {
+    column-gap: 30px;
+    padding-bottom: 24px;
+    margin-bottom: 48px;
+  }
+}
+
+@media (max-width: $mob) {
+  .cards {
+    grid-gap: 24px;
+  }
+
+  .titles {
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-between;
+    align-items: stretch;
+    row-gap: 20px;
+    margin-bottom: 32px;
+  }
 }
