--- a/src/components/cards/categorieModerCard/CategorieModerCard.module.scss
+++ b/src/components/cards/categorieModerCard/CategorieModerCard.module.scss
@@ -9,14 +9,14 @@
   position: relative;
 
   @include hover {
-      .name {
-        color: $grey;
-      }
-  
-      .img {
-        transform: scale(1.05);
-      }
+    .name {
+      color: $grey;
     }
+
+    .img {
+      transform: scale(1.05);
+    }
+  }
 }
 
 .img {
@@ -35,7 +35,7 @@
 .btns {
   position: absolute;
   top: 20px;
-  right: 35%;
+  right: calc(50% - 84px / 2);
   display: flex;
   column-gap: 20px;
 }
