--- a/src/components/sections/admin/adminUsers/AdminUsers.module.scss
+++ b/src/components/sections/admin/adminUsers/AdminUsers.module.scss
@@ -31,6 +31,14 @@
   .searchSortContainer {
     padding-bottom: 10px;
     margin-bottom: 30px;
+    flex-direction: column;
+    row-gap: 12px;
+    justify-content: space-between;
+
+    & > div,
+    input {
+      width: 100%;
+    }
   }
 }
 
@@ -49,5 +57,7 @@
   .sortContainer {
     width: 100%;
     justify-content: flex-end;
+    flex-wrap: wrap;
+    row-gap: 8px;
   }
 }
