--- a/src/components/ui/textarea/Textarea.module.scss
+++ b/src/components/ui/textarea/Textarea.module.scss
@@ -33,6 +33,7 @@
   border-radius: 4px;
   resize: vertical;
   resize: none;
+  background-color: transparent;
 
   &:read-only {
     color: $greyLight;
