--- a/src/components/layouts/mainHeader/MainHeader.module.scss
+++ b/src/components/layouts/mainHeader/MainHeader.module.scss
@@ -3,7 +3,7 @@
 .header {
   &.scroll {
     .top {
-      background-color: $whiteDark;
+      background-color: $greyLight;
     }
   }
 }
@@ -13,7 +13,7 @@
 }
 
 .top {
-  background-color: $whiteDark;
+  background-color: $greyLight;
   padding: 12px 0;
   position: fixed;
   width: 100%;
@@ -56,7 +56,7 @@
       }
 
       .top {
-        background-color: $whiteDark;
+        background-color: $greyLight;
       }
     }
   }
@@ -88,7 +88,7 @@
   }
 
   .top {
-    background-color: $white;
+    background-color: $greyLight;
   }
 
   .socials {
@@ -102,7 +102,7 @@
   .bottomContainer {
     padding: 24px 0;
     row-gap: 0;
-    background-color: $whiteDark;
+    background-color: $greyLight;
   }
 
   .top {
