--- a/src/components/layouts/searchPanel/SearchPanel.module.scss
+++ b/src/components/layouts/searchPanel/SearchPanel.module.scss
@@ -7,7 +7,7 @@
   z-index: 100;
   top: 0;
   left: 0;
-  background-color: $whiteDark;
+  background-color: $greyLight;
   transform: translateY(-100%);
 
   &.open {
