--- a/src/styles/common/_main.scss
+++ b/src/styles/common/_main.scss
@@ -122,7 +122,7 @@ body {
   color: $black;
   margin: 0;
   padding: 0;
-  background: $white;
+  background: $whiteDark;
   overflow-x: hidden;
   min-height: 100vh;
   position: relative;
